--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
+          <h4>PHARRELL WILLIAMS</h4>
+          <h2>HAPPY</h2>
+          <h4>FROM DESPICABLE ME</h4>
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
-          <!-- Level 2 'HAPPY' Header -->
-
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 
         </div>
       </div>
 
       <div id="back" class="album">
+        <h3>FROM DESPICABLE ME</h3>
+        <h1>HAPPY</h1>
+        <h3>WRITTEN BY</h3>
+        <p><SOURCE class="md">PUBLISHED BY Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam magnam molestiae rerum nemo ad sequi? Accusamus quidem, officia saepe id architecto aut excepturi nihil amet odit! Nemo architecto totam odio.</SOURCE></p>
+        <span></span>
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"/>
+        <span>PHARRELLWILLIAMS.COM</span>
+        <br\>
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
@@ -36,8 +42,9 @@
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png"/>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        
 
       </div>
     </div>
